--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
         <!-- Carousel End -->
 
         <!-- Services Offered Start -->
-        <div class="container-fluid feature py-5">
-            <div class="container py-5">
+        <div class="container-fluid feature py-0">
+            <div class="container py-4">
+                <!-- section heading and description -->
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                     <h1 class="display-5 text-capitalize mb-3">Services <span class="text-primary">Offered</span></h1>
                     <p class="mb-0">From routine tune-ups to complex repairs, we provide comprehensive care for all types of vehicles.
@@ -247,66 +248,108 @@
                         When you choose us, you're opting for unparalleled expertise and commitment to keeping your vehicle in prime condition.
                         Trust our seasoned professionals to handle all your automotive needs with precision and care.</p>
                 </div>
-                <div class="row g-4 align-items-center">
+                <div class="row g-4">
                     <div class="col-xl-4">
-                        <div class="row gy-4 gx-0">
+                        <div class="row gy-4">
                             <div class="col-12 wow fadeInLeft" data-wow-delay="0.1s">
                                 <div class="feature-item">
                                     <div class="feature-icon">
-                                        <span class="fa-solid fa-wrench fa-2x"></span>
+                                        <span class="fa-solid fa-oil-can fa-2x"></span>
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="mb-3">First Class services</h5>
-                                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, in illum aperiam ullam magni eligendi?</p>
+                                        <h5 class="mb-3">Standard Maintenance</h5>
+                                        <ul>
+                                            <li>Factory Scheduled Maintenance</li>
+                                            <li>Oil Changes</li>
+                                            <li>Tune Ups</li>
+                                            <li>Fluid Services</li>
+                                            <li>Suspension, and Steering Repair</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 wow fadeInLeft" data-wow-delay="0.2s">
+                            <div class="col-12 wow fadeInLeft" data-wow-delay="0.1s">
                                 <div class="feature-item">
                                     <div class="feature-icon">
-                                        <span class="fa fa-road fa-2x"></span>
+                                        <span class="fa fa-wind fa-2x"></span>
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="mb-3">24/7 road assistance</h5>
-                                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, in illum aperiam ullam magni eligendi?</p>
+                                        <h5 class="mb-3">Heating & Air Conditioner Repair</h5>
+                                        <ul>
+                                            <li>Heating and Cooling Systems</li>
+                                            <li>Belt Repair and Replacement</li>
+                                            <li>Compressor Repair and Replacement</li>
+                                            <li>Evaporator Repair and Replacement</li>
+                                            <li>Refrigerant Replacement</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-xl-4 wow bounceInUp" data-wow-delay="0.3s">
-                        <img src="img/services-car.png" class="img-fluid w-100" style="object-fit: cover;" alt="Img">
+                    <!-- center column with image -->
+                    <div class="col-xl-4 d-flex align-items-center justify-content-center wow bounceInUp" data-wow-delay="0.3s">
+                        <img src="img/services-car.png" class="img-fluid" style="max-height: 400px; object-fit: contain;" alt="Services Car">
                     </div>
+                    <!-- right side column -->
                     <div class="col-xl-4">
-                        <div class="row gy-4 gx-0">
-                            <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
-                                <div class="feature-item justify-content-end">
-                                    <div class="text-end me-4">
-                                        <h5 class="mb-3">Quality at Minimum</h5>
-                                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, in illum aperiam ullam magni eligendi?</p>
+                        <div class="row gy-4">
+                            <div class="col-12 wow fadeInRight" data-wow-delay="0.1s">
+                                <div class="feature-item">
+                                    <div class="ms-4">
+                                        <h5 class="mb-3">Transmission Services</h5>
+                                        <ul>
+                                            <li>Transmission Repair and Service</li>
+                                            <li>Axle Repair & Replacement</li>
+                                            <li>Transmission Fluid Flush and Service</li>
+                                            <li>Driveline Repair and Maintenance</li>
+                                            <li>Differential Diagnosis and Service</li>
+                                        </ul>
                                     </div>
                                     <div class="feature-icon">
-                                        <span class="fa fa-tag fa-2x"></span>
+                                        <span class="fa fa-gears fa-2x"></span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 wow fadeInRight" data-wow-delay="0.3s">
-                                <div class="feature-item justify-content-end">
-                                    <div class="text-end me-4">
-                                        <h5 class="mb-3">Free Pick-Up & Drop-Off</h5>
-                                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, in illum aperiam ullam magni eligendi?</p>
+                            <div class="col-12 wow fadeInRight" data-wow-delay="0.1s">
+                                <div class="feature-item">
+                                    <div class="ms-4">
+                                        <h5 class="mb-3">Engine Services</h5>
+                                        <ul>
+                                            <li>Engine Repair</li>
+                                            <li>Belt and Hose Replacement</li>
+                                            <li>Fuel Injection Repair and Service</li>
+                                            <li>Engine Performance Check</li>
+                                            <li>Drivability Diagnostics and Repair</li>
+                                        </ul>
                                     </div>
                                     <div class="feature-icon">
-                                        <span class="fa fa-map-pin fa-2x"></span>
+                                        <span class="fa fa-screwdriver-wrench fa-2x"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <!-- centered bottom column -->
+                    <div class="row mt-4">
+                        <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="feature-item d-inline-flex flex-column">
+                                <div class="feature-item align-items-center">
+                                    <div class="feature-icon mb-3">
+                                        <span class="fa fa-road-circle-exclamation fa-2x"></span>
+                                    </div>
+                                    <h5 class="mb-3 px-4">... And More!</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
-        <!-- Features End -->
+        <!-- Services Offered End -->
 
         <!-- Testimonial Start -->
         <div class="container-fluid testimonial pb-5">
