--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                                     </div>
                                     <div class="col-lg-6 d-none d-lg-flex fadeInRight animated align-items-center" data-animation="fadeInRight" data-delay="1s" style="animation-delay: 1.25s;">
                                         <div class="text-start">
-                                            <h1 class="display-3 text-white">Your local trusted car care specialists!</h1>
-                                            <p class="text-start">Contact us now to set up an appointment.</p>
+                                            <h1 class="display-3 text-white px-4">Your local trusted car care specialists!</h1>
+                                            <p class="text-start px-4">Contact us now to set up an appointment.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -287,10 +287,12 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- center column with image -->
-                    <div class="col-xl-4 d-flex align-items-center justify-content-center wow bounceInUp" data-wow-delay="0.3s">
+                    <div class="col-xl-4 d-flex align-items-center justify-content-center wow bounceInUp services-car-image" data-wow-delay="0.3s">
                         <img src="img/services-car.png" class="img-fluid" style="max-height: 400px; object-fit: contain;" alt="Services Car">
                     </div>
+
                     <!-- right side column -->
                     <div class="col-xl-4">
                         <div class="row gy-4">
@@ -337,7 +339,7 @@
                             <div class="feature-item d-inline-flex flex-column">
                                 <div class="feature-item align-items-center">
                                     <div class="feature-icon mb-3">
-                                        <span class="fa fa-road-circle-exclamation fa-2x"></span>
+                                        <span class="fa fa-list-check fa-2x"></span>
                                     </div>
                                     <h5 class="mb-3 px-4">... And More!</h5>
                                 </div>
