minor aesthetic updates

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     </div>
 
                     <!-- center column with image -->
-                    <div class="col-xl-4 d-flex align-items-center justify-content-center wow bounceInUp services-car-image" data-wow-delay="0.3s">
+                    <div class="col-xl-4 d-flex align-items-center justify-content-center wow fadeInUp services-car-image" data-wow-delay="0.3s">
                         <img src="img/services-car.png" class="img-fluid" style="max-height: 400px; object-fit: contain;" alt="Services Car">
                     </div>
 
@@ -354,8 +354,8 @@
         <!-- Services Offered End -->
 
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial pb-5">
-            <div class="container py-5">
+        <div class="container-fluid testimonial pb-0">
+            <div class="container py-4">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                     <h1 class="display-5 text-capitalize mb-3">Our Client's<span class="text-primary"> Reviews</span></h1>
                     <p class="mb-0">Want to know what people are saying about us? Check out these real reviews from some of our awesome clients. See why our customers keep coming back for all their auto needs. From oil changes to engine rebuilds, we've got you covered – and here's what people are saying about it."</p>
