add zoom on hover to feature items

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- TO DO:
------------
+
 1. create back up method for hanging API server/no connection. display a text box to manually type vehicle make/model?
 2. create new "back to top" button. current one is too slow
+3. only show year selector at first, then year and make, then all 3
 
 -->
 
